test/vm/errors/integer_overflow.ach
// Expected error: integer overflow
let x = 576460752303423487 + 1
